--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -48,7 +48,9 @@ jobs:
           php-version: "8.1"
           tools: "composer:2.4"
       - name: Hatchet setup
-        run: bundle exec hatchet ci:setup
+        run: |
+          bundle exec hatchet ci:setup
+          heroku update --version 8.1.9
       - name: Export HEROKU_PHP_PLATFORM_REPOSITORIES to …-develop (since we are not building main or a tag)
         if: github.ref_type != 'tag' && github.ref_name != 'main'
         run: |
