Exclude `support/{build,devcenter}/` from the packaged buildpack
Since these directories are not needed at build time, but currently
account for two thirds of the size of the packaged buildpack.

--- a/buildpack.toml
+++ b/buildpack.toml
@@ -6,6 +6,8 @@ name = "PHP"
 		".github/",
 		".gitignore",
 		".rspec_parallel",
+		"support/build/",
+		"support/devcenter/",
 		"test/",
 		"Gemfile",
 		"Gemfile.lock",
