Add (multi-arch) heroku-24 to platform-build.yml
GUS-W-14667552
GUS-W-15158300

--- a/.github/workflows/platform-build.yml
+++ b/.github/workflows/platform-build.yml
@@ -14,6 +14,8 @@ on:
         options:
         - heroku-20
         - heroku-22
+        - heroku-24-amd64
+        - heroku-24-arm64
         required: true
       dry-run:
         description: 'Build packages without deploying to S3 (e.g. for testing a formula)'
@@ -62,10 +64,18 @@ jobs:
           ls -f ${{inputs.formulae}} | xargs -n 1 echo - >> "$GITHUB_STEP_SUMMARY"
           ls -f ${{inputs.formulae}} | jq -jcRn '[inputs|select(length>0)]' >> "$GITHUB_OUTPUT"
   docker-build:
-    runs-on: ubuntu-22.04
+    runs-on: ${{ endsWith(inputs.stack, '-arm64') && 'pub-hk-ubuntu-22.04-arm-large' || 'ubuntu-22.04' }}
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+      # The beta ARM64 runners don't yet ship with the normal installed tools.
+      - name: Install Docker (ARM64 only)
+        if: endsWith(inputs.stack, '-arm64')
+        run: |
+          sudo apt-get update --error-on=any
+          sudo apt-get install -y --no-install-recommends acl docker.io docker-buildx
+          sudo usermod -aG docker $USER
+          sudo setfacl --modify user:$USER:rw /var/run/docker.sock
       - name: Cache Docker build
         id: cache-docker
         uses: actions/cache@v4
@@ -74,14 +84,18 @@ jobs:
           path: /tmp/docker-cache.tar.gz
       - name: Build Docker image
         if: steps.cache-docker.outputs.cache-hit != 'true'
-        run: docker build --tag heroku-php-build-${{inputs.stack}}:${{github.sha}} --file support/build/_docker/${{inputs.stack}}.Dockerfile .
+        # our "input" stack might contain a "-amd64" or "-arm64" suffix, which we strip off for the Dockerfile name
+        run: |
+          shopt -s extglob
+          stackname_with_architecture=${{inputs.stack}}
+          docker build --tag heroku-php-build-${stackname_with_architecture}:${{github.sha}} --file support/build/_docker/${stackname_with_architecture%-?(amd|arm)64}.Dockerfile .
       - name: Save built Docker image
         if: steps.cache-docker.outputs.cache-hit != 'true'
         run: docker save heroku-php-build-${{inputs.stack}}:${{github.sha}} | gzip -1 > /tmp/docker-cache.tar.gz
   deploys:
     needs: [formulae-list, docker-build]
     if: ${{ needs.formulae-list.outputs.formulae != '[]' && needs.formulae-list.outputs.formulae != '' }}
-    runs-on: pub-hk-ubuntu-22.04-medium
+    runs-on: ${{ endsWith(inputs.stack, '-arm64') && 'pub-hk-ubuntu-22.04-arm-large' || 'pub-hk-ubuntu-22.04-large' }}
     strategy:
       max-parallel: ${{ fromJSON(inputs.concurrency) }}
       matrix:
@@ -97,6 +111,14 @@ jobs:
         with:
           key: docker-cache-heroku-php-build-${{inputs.stack}}.${{github.sha}}
           path: /tmp/docker-cache.tar.gz
+      # The beta ARM64 runners don't yet ship with the normal installed tools.
+      - name: Install Docker (ARM64 only)
+        if: endsWith(inputs.stack, '-arm64')
+        run: |
+          sudo apt-get update --error-on=any
+          sudo apt-get install -y --no-install-recommends acl docker.io docker-buildx
+          sudo usermod -aG docker $USER
+          sudo setfacl --modify user:$USER:rw /var/run/docker.sock
       - name: Load cached Docker image
         run: docker load -i /tmp/docker-cache.tar.gz
       - name: Build formula without deploying
@@ -111,7 +133,7 @@ jobs:
   mkrepo:
     needs: [deploys]
     if: ${{ inputs.dry-run == false && inputs.publish == true }}
-    runs-on: ubuntu-22.04
+    runs-on: ${{ endsWith(inputs.stack, '-arm64') && 'pub-hk-ubuntu-22.04-arm-large' || 'ubuntu-22.04' }}
     env:
       AWS_ACCESS_KEY_ID:  ${{ secrets.AWS_ACCESS_KEY_ID }}
       AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
@@ -123,6 +145,14 @@ jobs:
         with:
           key: docker-cache-heroku-php-build-${{inputs.stack}}.${{github.sha}}
           path: /tmp/docker-cache.tar.gz
+      # The beta ARM64 runners don't yet ship with the normal installed tools.
+      - name: Install Docker (ARM64 only)
+        if: endsWith(inputs.stack, '-arm64')
+        run: |
+          sudo apt-get update --error-on=any
+          sudo apt-get install -y --no-install-recommends acl docker.io docker-buildx
+          sudo usermod -aG docker $USER
+          sudo setfacl --modify user:$USER:rw /var/run/docker.sock
       - name: Load cached Docker image
         run: docker load -i /tmp/docker-cache.tar.gz
       - name: Re-generate platform package repository
