--- a/.github/workflows/platform-remove.yml
+++ b/.github/workflows/platform-remove.yml
@@ -14,6 +14,8 @@ on:
         options:
         - heroku-20
         - heroku-22
+        - heroku-24-amd64
+        - heroku-24-arm64
         required: true
       dry-run:
         description: 'Only list package removals, without executing'
@@ -26,7 +28,7 @@ permissions:
 
 jobs:
   remove:
-    runs-on: ubuntu-22.04
+    runs-on: ${{ endsWith(inputs.stack, 'arm64') && 'pub-hk-ubuntu-22.04-arm-large' || 'ubuntu-22.04' }}
     env:
       AWS_ACCESS_KEY_ID:  ${{ secrets.AWS_ACCESS_KEY_ID }}
       AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
@@ -44,12 +46,24 @@ jobs:
         with:
           key: docker-cache-heroku-php-build-${{inputs.stack}}.${{github.sha}}
           path: /tmp/docker-cache.tar.gz
+      # The beta ARM64 runners don't yet ship with the normal installed tools.
+      - name: Install Docker (ARM64 only)
+        if: endsWith(inputs.stack, '-arm64')
+        run: |
+          sudo apt-get update --error-on=any
+          sudo apt-get install -y --no-install-recommends acl docker.io docker-buildx
+          sudo usermod -aG docker $USER
+          sudo setfacl --modify user:$USER:rw /var/run/docker.sock
       - name: Load cached Docker image
         if: steps.restore-docker.outputs.cache-hit == 'true'
         run: docker load -i /tmp/docker-cache.tar.gz
       - name: Build Docker image
         if: steps.restore-docker.outputs.cache-hit != 'true'
-        run: docker build --tag heroku-php-build-${{inputs.stack}}:${{github.sha}} --file support/build/_docker/${{inputs.stack}}.Dockerfile .
+        # our "input" stack might contain a "-amd64" or "-arm64" suffix, which we strip off for the Dockerfile name
+        run: |
+          shopt -s extglob
+          stackname_with_architecture=${{inputs.stack}}
+          docker build --tag heroku-php-build-${stackname_with_architecture}:${{github.sha}} --file support/build/_docker/${stackname_with_architecture%-?(amd|arm)64}.Dockerfile .
       - name: Save built Docker image
         if: steps.restore-docker.outputs.cache-hit != 'true'
         run: docker save heroku-php-build-${{inputs.stack}}:${{github.sha}} | gzip -1 > /tmp/docker-cache.tar.gz
