--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -47,6 +47,8 @@ jobs:
         with:
           php-version: "8.2"
           tools: "composer:2.7"
+      - name: Install packages from requirements.txt (for some tests)
+        run: pip install -r requirements.txt
       - name: Hatchet setup
         run: bundle exec hatchet ci:setup
       - name: Export HEROKU_PHP_PLATFORM_REPOSITORIES to …-develop (since we are not building main or a tag)
