small cleanup to GHA job summary output of syncs
Now show the full sync output when really syncing, and only the sync.sh job summary (without the new-ish 'POTENTIALLY DESTRUCTIVE ACTION' warning at the end) when performing a dry-run, or when printing for info purposes at the end of a build

--- a/.github/workflows/platform-build.yml
+++ b/.github/workflows/platform-build.yml
@@ -136,5 +136,5 @@ jobs:
           echo '## Package changes available for syncing to production bucket' >> "$GITHUB_STEP_SUMMARY"
           echo '**This is output from a dry-run**, no changes have been synced to production:' >> "$GITHUB_STEP_SUMMARY"
           echo '```' >> "$GITHUB_STEP_SUMMARY"
-          sed -n '/The following packages will/,$p' sync.out >> "$GITHUB_STEP_SUMMARY"
+          sed -n '/^The following packages will/,/POTENTIALLY DESTRUCTIVE ACTION/{/POTENTIALLY DESTRUCTIVE ACTION/!p}' sync.out >> "$GITHUB_STEP_SUMMARY"
           echo '```' >> "$GITHUB_STEP_SUMMARY"
