--- a/.github/workflows/platform-remove.yml
+++ b/.github/workflows/platform-remove.yml
@@ -1,5 +1,5 @@
-name: Platform packages removal from -develop/
-run-name: Removal${{ inputs.dry-run == true && ' dry-run' || '' }} from dist-${{inputs.stack}}-develop/
+name: Platform packages removal from -cnb/
+run-name: Removal${{ inputs.dry-run == true && ' dry-run' || '' }} from dist-${{inputs.stack}}-cnb/
 
 on:
   workflow_dispatch:
